--- a/index.html
+++ b/index.html
@@ -17,22 +17,33 @@
 
     <h2>Luchadores</h2>
     <div class="jugadores-container">
+
         <div class="jugador-container">
-            <label id="label-luchador1">Luchador 1</label>
-            <div class="botones-container">
-                <button class="gano" data-luchador="1">Gano</button>
-                <button class="gano" data-luchador="1">Vuelve</button>
-                <button class="gano" data-luchador="1">Cabio</button>
+            <div class=" pantalla-izquierda  padding1">
+                <label id="label-luchador1">Luchador 1</label>
+            </div>
+            <div class="botones-container  pantalla-derecha  padding1">
+                <div class="botones-container">
+                    <button class="gano" data-luchador="1">Gano</button>
+                    <button class="gano" data-luchador="1">Vuelve</button>
+                    <button class="gano" data-luchador="1">Cabio</button>
+                </div>
             </div>
         </div>
+
         <div class="jugador-container">
-            <label id="label-luchador2">Luchador 2</label>
-            <div class="botones-container">
-                <button class="gano" data-luchador="2">Gano</button>
-                <button class="gano" data-luchador="2">Vuelve</button>
-                <button class="gano" data-luchador="2">Cabio</button>
+            <div class=" pantalla-izquierda  padding1 ">
+                <label id="label-luchador2">Luchador 2</label>
+            </div>
+            <div class="botones-container  pantalla-derecha  padding1">
+                <div class="botones-container">
+                    <button class="gano" data-luchador="2">Gano</button>
+                    <button class="gano" data-luchador="2">Vuelve</button>
+                    <button class="gano" data-luchador="2">Cabio</button>
+                </div>  
             </div>
         </div>
+
     </div>
 
     <h2>Jugadores y Puntajes</h2>
