Agregada la funcionalidad del boton Gano

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="botones-container  pantalla-derecha  padding1">
                 <div class="botones-container">
                     <button class="gano" data-luchador="1">Gano</button>
-                    <button class="gano" data-luchador="1">Vuelve</button>
-                    <button class="gano" data-luchador="1">Cabio</button>
+                    <button class="vuelve" data-luchador="1">Vuelve</button>
+                    <button class="alfinal" data-luchador="1">Cabio</button>
                 </div>
             </div>
         </div>
@@ -38,8 +38,8 @@
             <div class="botones-container  pantalla-derecha  padding1">
                 <div class="botones-container">
                     <button class="gano" data-luchador="2">Gano</button>
-                    <button class="gano" data-luchador="2">Vuelve</button>
-                    <button class="gano" data-luchador="2">Cabio</button>
+                    <button class="vuelve" data-luchador="2">Vuelve</button>
+                    <button class="alfinal" data-luchador="2">Cabio</button>
                 </div>  
             </div>
         </div>
