Refactoring de botones gano

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="botones-container  pantalla-derecha  padding1">
                 <div class="botones-container">
-                    <button class="gano" data-luchador="1">Gano</button>
+                    <button class="gano" onclick="ganoLuchador1()">Gano</button>
                     <button class="vuelve" data-luchador="1">Vuelve</button>
                     <button class="alfinal" data-luchador="1">Cabio</button>
                 </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="botones-container  pantalla-derecha  padding1">
                 <div class="botones-container">
-                    <button class="gano" data-luchador="2">Gano</button>
+                    <button class="gano" onclick="ganoLuchador2()">Gano</button>
                     <button class="vuelve" data-luchador="2">Vuelve</button>
                     <button class="alfinal" data-luchador="2">Cabio</button>
                 </div>  
