Agregado el mensaje de error para menos de 2 jugadores

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h2>Luchadores</h2>
     <div class="jugadores-container">
-
+        <div id="mensajeError" class="mensaje-error"></div>
         <div class="jugador-container">
             <div class=" pantalla-izquierda  padding1">
                 <label id="label-luchador1">Luchador 1</label>
