Implementadas las funcionalidades de los botones vuelve y alfinal

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="botones-container  pantalla-derecha  padding1">
                 <div class="botones-container">
                     <button class="gano" onclick="ganoLuchador1()">Gano</button>
-                    <button class="vuelve" data-luchador="1">Vuelve</button>
-                    <button class="alfinal" data-luchador="1">Cabio</button>
+                    <button class="vuelve" onclick="vuelveLuchador1()">Vuelve</button>
+                    <button class="alfinal" onclick="alFinalLuchador1()">Cabio</button>
                 </div>
             </div>
         </div>
@@ -38,8 +38,8 @@
             <div class="botones-container  pantalla-derecha  padding1">
                 <div class="botones-container">
                     <button class="gano" onclick="ganoLuchador2()">Gano</button>
-                    <button class="vuelve" data-luchador="2">Vuelve</button>
-                    <button class="alfinal" data-luchador="2">Cabio</button>
+                    <button class="vuelve" onclick="vuelveLuchador2()">Vuelve</button>
+                    <button class="alfinal" onclick="alFinalLuchador2()">Cabio</button>
                 </div>  
             </div>
         </div>
@@ -50,8 +50,7 @@
     <ul id="lista-jugadores"></ul>
 
     <h3 id="siguiente">Siguiente:</h3>
-    <h3 id="eliminado">Este se cago</h3>
-s
+    
     <button id="eliminar">Eliminar</button>
 
     <script src="script.js"></script>
