Se agrego la funcionalidad del boton Reset

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 
-        <button id="eliminar">Reset</button>
+        <button id="eliminar" onclick="resetLista()">Reset</button>
 
 
         <div id="modal" class="modal">
